# PeakRDL-svd

./: .gitignore  README.md  pyproject.toml
src/peakrdl_svd/: __about__.py  __init__.py  __peakrdl__.py  exporter.py
test/: run.sh  test_import_export.py  unittest_utils.py
test/schema/: svd.xsd
